# deepgram-rust-captions

./: Cargo.toml  LICENSE  README.md  requirements.txt
.github/workflows/: CI.yaml
examples/: generate_srt_webvtt.py  generate_srt_webvtt.rs
examples/files/: Arthur-python.srt  Arthur-python.vtt  Arthur-rust.srt  Arthur-rust.vtt
src/: converters.rs  helpers.rs  lib.rs  srt.rs  webvtt.rs
tests/: test_dg_transcriptions.rs
