[package]
name = "deepgram-rust-captions"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of Deepgram's WebVTT and SRT formatting"
license = "MIT"
readme = "README.md"
repository = "https://github.com/oele-isis-vanderbilt/deepgram-rust-captions"
homepage = "https://github.com/oele-isis-vanderbilt/deepgram-rust-captions"
keywords = ["deepgram", "webvtt", "srt", "rust", "captions", "transcription"]
authors = ["Umesh Timalsina <umesh.timalsina@vanderbilt.edu>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
deepgram = "0.5.0"
serde_json = "1.0.120"

[dev-dependencies]
regex = "1.10.5"
tokio = "1.38.0"


